--- a/index.html
+++ b/index.html
@@ -588,6 +588,21 @@
                   </li>
                  
                 </ul>
+
+                <div class="flex flex-row w-full items-center space-x-4">
+                  <button class="relative bg-lightBlue flex items-center justify-start text-white
+                  py-[14px] px-[18px] md:pr-[90px] rounded-md font-mullish font-bold hover:bg-lightBlue500 transition-all duration-200">
+                    Sign Up
+                    <div class="w-12 h-[60px] bg-greenLight absolute right-6 skew-x-[20deg] flex justify-center items-center">
+                      <svg style="color: white" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right -skew-x-[20deg]" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" fill="white"></path> </svg>
+                    </div>
+                  </button>
+                  <!--hyperlink wala-->
+                  <div class="flex flex-row items-center cursor-pointer group">
+                    <a href="#" class="font-mullish font-bold text-lightBlue500 group-hover:text-lightBlue transition-all duration-200">Know More</a>
+                    <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 group-hover:text-lightBlue transition-all duration-200"></i>
+                  </div>
+                </div>
               </div>
 
           </div>
