--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
         padding-top: 12rem;
         padding-bottom: 12rem;
     }
+    .companiesList{
+      animation: 10s infinite linear moveCompany;
+    }
+
+    @keyframes moveCompany{
+
+      0%{
+        top:0;
+      }
+      100%{
+        top:-50%;
+      }
+    }
+
 </style>
 </head>
 
@@ -909,6 +923,26 @@
           <p class="font-mullish text-white opacity-80">PCI DSS Level 1 compliant solution which removes your burden of regulatory compliance.</p>
       </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!--join razorpay-->
+  <section class="bg-[#f5f8fe] relative pt-40 pb-12 -mt-[200px] -z-[200]">
+    <div class="w-11/12 max-w-[1080px] mx-auto relative flex flex-row">
+      <!--left part-->
+      <div class="flex flex-col justify-center max-w-[calc(100%-500px)]">
+        <h2 class="font-mullish font-bold text-2xl text-deepBlueHead">Join the 50,00,000 businesses using Razorpay</h2>
+        <div class="w-6 h-1 bg-greenLight mb-10 my-4"></div>
+        <p class="font-mullish opacity-80">We make it easier for you to focus on building great products while we work on simplifying your payments. Become one of us by joining thousands of our happy users and simplify the online payment experience for your customers.</p>
+        <p class="font-mullish mt-6 opacity-80">Focus on your business while we handle the complexities of payments for you.</p>
+      </div>
+
+      <!--right part-->
+      <div class="h-[500px] w-[500px] relative overflow-y-hidden">
+        <div style="background: linear-gradient(180deg,#f4f8ff,#fff0)" class="absolute w-full h-[150px] top-0 z-50"></div>
+        <img src="./images/comanies.png" alt="" class="absolute companiesList h-auto object-cover">
+        <div style="background: linear-gradient(0deg,#f4f8ff,#fff0)" class="absolute w-full h-[150px] bottom-0 z-50"></div>
       </div>
     </div>
   </section>
