--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
       padding-bottom: 12rem;
     }
 
-    .ctaSection{
-      background-size: 100% 100%;
-    }
+    
 
     .companiesList {
       animation: 10s infinite linear moveCompany;
@@ -58,48 +56,48 @@
 
       <ul class="flex space-x-6">
         <li
-          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group">
+          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group hidden lg:block">
           <a href="#">Payments</a>
           <div class="absolute bottom-0 w-full h-1 bg-lightBlue hidden group-hover:block transition-all duration-200">
           </div>
         </li>
 
         <li
-          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group">
+          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group hidden lg:block">
           <a href="#">Banking+</a>
           <div class="absolute bottom-0 w-full h-1 bg-lightBlue hidden group-hover:block transition-all duration-200">
           </div>
         </li>
 
         <li
-          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group">
+          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group hidden lg:block">
           <a href="#">Line of Credit</a>
           <div class="absolute bottom-0 w-full h-1 bg-lightBlue hidden group-hover:block transition-all duration-200">
           </div>
         </li>
 
-        <li class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 group">
+        <li class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 group hidden lg:block">
           <a href="#">Payroll</a>
           <div class="absolute bottom-0 w-full h-1 bg-lightBlue hidden group-hover:block transition-all duration-200">
           </div>
         </li>
 
         <li
-          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group">
+          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group hidden lg:block">
           <a href="#">Resources</a>
           <div class="absolute bottom-0 w-full h-1 bg-lightBlue hidden group-hover:block transition-all duration-200">
           </div>
         </li>
 
         <li
-          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group">
+          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group hidden lg:block">
           <a href="#">Support</a>
           <div class="absolute bottom-0 w-full h-1 bg-lightBlue hidden group-hover:block transition-all duration-200">
           </div>
         </li>
 
         <li
-          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group">
+          class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all duration-200 relative group hidden lg:block">
           <a href="#">Pricing</a>
           <div class="absolute bottom-0 w-full h-1 bg-lightBlue hidden group-hover:block transition-all duration-200">
           </div>
@@ -107,14 +105,14 @@
       </ul>
 
       <div class="flex space-x-6">
-        <img src="./images/india-flag.svg" width="28px" height="20px" alt="" />
+        <img src="./images/india-flag.svg" width="28px" height="20px" alt="" class="hidden lg:block"/>
 
         <button class="py-3 px-5 font-mullish text-white border-lightBlue border text-sm font-bold">
           Log In
         </button>
 
         <button
-          class="bg-white py-3 px-4 font-mullish rounded-sm text-sm text-lightBlue300 border transition-all duration-200 hover:text-lightBlue500 font-bold">
+          class="bg-white py-3 px-4 font-mullish rounded-sm text-sm text-lightBlue300 border transition-all duration-200 hover:text-lightBlue500 font-bold hidden lg:flex">
           Sign Up
         </button>
       </div>
@@ -123,7 +121,7 @@
 
   <!--Hero Section-->
   <section class="relative bg-deepBlue">
-    <div class="w-10/12 max-w-[1080px] flex flex-row justify-between items-center mx-auto">
+    <div class="w-10/12 max-w-[1080px] flex lg:flex-row flex-col justify-between items-center mx-auto">
       <!--left part-->
       <div class="text-white space-y-8">
         <h1 class="font-mullish font-bold text-[40px] leading-[1.2]">
@@ -160,8 +158,12 @@
       class="absolute top-[3rem] right-0 inline-block rotate-180" />
 
     <div class="relative w-[11/12] max-w-[1080px] mx-auto pt-4">
-      <h2 class="font-mullish text-center text-2xl leading-[1.2] font-extrabold">
+      <h2 class="font-mullish text-center text-2xl leading-[1.2] font-extrabold hidden md:block">
         Accept Payments with Razorpay Payment Suite
+      </h2>
+
+      <h2 class="font-mullish text-center text-5xl leading-[1.2] font-extrabold md:hidden">
+        Explore Razorpay Payment Suite
       </h2>
       <div class="w-6 h-1 bg-greenLight mx-auto mt-4 mb-6"></div>
 
@@ -205,13 +207,13 @@
 
           <!--for button and hyperlink-->
 
-          <div class="flex flex-row items-center space-x-4">
+          <div class="flex flex-col-reverse md:flex-row items-center space-x-4">
             <button
-              class="bg-lightBlue w-fit rounded-md font-mullish font-bold hover:bg-lightBlue500 translate-all duration-200 py-[14px] px-[18px] text-white">Sign
+              class="bg-lightBlue w-full md:w-fit rounded-md font-mullish font-bold hover:bg-lightBlue500 translate-all duration-200 py-[14px] px-[18px] text-white ">Sign
               Up Now</button>
             <!--hyperlink-->
 
-            <div class="flex items-center cursor-pointer group">
+            <div class="flex self-start md:items-center items-center cursor-pointer group">
               <a href="#"
                 class="font-mullish font-bold text-lightBlue500 group-hover:text-gray-50 transition-all duration-200">Know
                 More</a>
@@ -221,10 +223,10 @@
           </div>
         </div>
 
-        <img src="./images/payment-suite.png" alt="" class="max-w-[600px] absolute right-0 bottom-0 " />
+        <img src="./images/payment-suite.png" alt="" class="max-w-[600px] absolute right-0 bottom-0 hidden md:max-w-[400px] lg:max-w-[600px] md:block lg:block" />
       </div>
 
-      <div class="w-full grid grid-cols-3 gap-4 mx-auto">
+      <div class="w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mx-auto">
 
         <!--box1-->
 
@@ -562,10 +564,11 @@
 
             </ul>
 
-            <div class="flex flex-row w-full items-center space-x-4">
+            <div class="flex flex-col-reverse md:flex-row w-full items-center space-x-4">
               <button
-                class="relative bg-lightBlue flex items-center justify-start text-white
-                  py-[14px] px-[18px] md:pr-[90px] rounded-md font-mullish font-bold hover:bg-lightBlue500 transition-all duration-200">
+                class="relative bg-lightBlue flex items-center place-content-center md:justify-start text-white
+                  py-[14px] px-[18px] md:pr-[90px] rounded-md font-mullish font-bold hover:bg-lightBlue500 transition-all duration-200
+                  self-stretch md:w-fit">
                 Sign Up
                 <div
                   class="w-12 h-[60px] bg-greenLight absolute right-6 skew-x-[20deg] flex justify-center items-center">
@@ -590,13 +593,14 @@
 
 
           <!--background image for content box-->
-          <img src="./images/buisness-banking.png" alt="" class="max-w-[600px] absolute right-0 bottom-0 z-20">
+          <img src="./images/buisness-banking.png" alt="" class="max-w-[600px] absolute right-0 bottom-0 z-20 hidden md:max-w-[400px]
+          lg:max-w-[600px] md:block lg:block">
         </div>
 
 
         <!--card box-->
 
-        <div class="grid grid-cols-3 w-full gap-4 my-14">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-full gap-4 my-14">
           <!--box1-->
           <div class="w-full min-h-[15rem] relative cursor-pointer featureCard2">
             <!-- box icon -->
@@ -714,7 +718,9 @@
         <!--demo box-->
 
         <div
-          class="w-full flex flex-row items-center justify-evenly border border-slate-700 mb-24 gap-y-6 p-8 relative rounded-md">
+          class="w-full items-center justify-evenly border border-slate-700 mb-24 gap-y-6 p-8 relative rounded-md hidden
+          md:flex
+          md:flex-col lg:flex lg:flex-row" >
           <p class="font-mullish text-white text-xl">Check out the live demo to learn how RazorpayX works.
             <span class="font-bold">No sign-up required!</span>
           </p>
@@ -756,7 +762,7 @@
       <img src="./images/feature-section1-dottedrows.png" alt="" loading="lazy"
         class="absolute w-[233px] -right-[3.5rem] -top-[6rem] -z-[10]">
 
-      <div class="w-full grid grid-cols-3 gap-y-10 gap-x-4 relative z-[100]">
+      <div class="w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-y-10 gap-x-4 relative z-[100]">
         <!--item1-->
         <div class="relative flex items-center z-0">
           <h2 class="text-deepBlueHead font-mullish font-extrabold text-4xl leading-[3.375rem]">New in the <br>
@@ -871,7 +877,7 @@
       <p class="font-mullish text-center max-w-[450px] text-white mx-auto">Empower your business with all the right
         tools to accept online payments and provide the best customer experience</p>
 
-      <div class="grid grid-cols-4 gap-[2rem] mt-8">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-[2rem] mt-8">
         <!--card1-->
 
         <div>
@@ -948,9 +954,9 @@
 
   <!--join razorpay-->
   <section class="bg-[#f5f8fe] relative pt-40 pb-12 -mt-[200px] -z-[200]">
-    <div class="w-11/12 max-w-[1080px] mx-auto relative flex flex-row">
+    <div class="w-11/12 max-w-[1080px] mx-auto relative flex flex-col md:flex-row">
       <!--left part-->
-      <div class="flex flex-col justify-center max-w-[calc(100%-500px)]">
+      <div class="flex flex-col justify-center w-full md:max-w-[calc(100%-500px)]">
         <h2 class="font-mullish font-bold text-2xl text-deepBlueHead">Join the 50,00,000 businesses using Razorpay</h2>
         <div class="w-6 h-1 bg-greenLight mb-10 my-4"></div>
         <p class="font-mullish opacity-80">We make it easier for you to focus on building great products while we work
@@ -961,7 +967,7 @@
       </div>
 
       <!--right part-->
-      <div class="h-[500px] w-[500px] relative overflow-y-hidden">
+      <div class="h-[500px] w-[500px] relative overflow-y-hidden mx-auto">
         <div style="background: linear-gradient(180deg,#f4f8ff,#fff0)" class="absolute w-full h-[150px] top-0 z-50">
         </div>
         <img src="./images/comanies.png" alt="" class="absolute companiesList h-auto object-cover">
@@ -1002,19 +1008,19 @@
     </button>
 
     <!--main content-->
-    <div class="flex flex-row max-w-[960px] items-center mx-auto my-20 space-x-[10rem]">
+    <div class="flex flex-col xl:flex-row max-w-[960px] items-center mx-auto my-20 space-x-[10rem]">
       <img src="./images/testimonial.jpg" alt="" loading="lazy" height="320px" width="320px" class="rounded-xl">
 
       <!--right part-->
 
-      <div class="max-w-[400px] ">
-        <img src="./images/quotes.svg" alt="" width="35px" height="40px" class="-mb-2" >
+      <div class="max-w-[400px] flex flex-col">
+        <img src="./images/quotes.svg" alt="" width="35px" height="40px" class="-mb-2 xl:order-1" >
 
-      <p class="font-mullish text-3xl font-extralight">Acquire Customers From New Customer Segments</p>
-      <a href="#" class="text-grayText underline">Learn More</a>
-      <h3 class="font-mullish font-extrabold text-2xl">Subham Kumar</h3>
-      <p class="font-mullish font-medium">Product Manager</p>
-      <img src="./images/fake-company-logo.png" alt="" height="40px" width="80px">
+      <p class="font-mullish text-3xl font-extralight xl:order-1">Acquire Customers From New Customer Segments</p>
+      <a href="#" class="text-grayText underline xl:order-1">Learn More</a>
+      <h3 class="font-mullish font-extrabold text-2xl -order-1 xl:order-1">Subham Kumar</h3>
+      <p class="font-mullish font-medium xl:order-1">Product Manager</p>
+      <img src="./images/fake-company-logo.png" alt="" height="40px" width="80px" class="xl:order-1 hidden lg:block">
       </div>
       
     </div>
@@ -1034,7 +1040,7 @@
   </section>
 
   <!--cta-->
-  <section class="bg-[url(/images/CTABg.svg)] w-full h-full bg-no-repeat bg-cover relative ctaSection">
+  <section class="bg-[url(/images/CTABg.svg)] w-full h-max bg-no-repeat bg-cover relative ctaSection ">
     <!--main content box-->
     <div class="w-11/12 max-w-[1080px] relative flex flex-row items-center mx-auto justify-between space-x-20 pt-16">
 
